Fix .content-item-options and .move-handle z-index to be lower than ul.dropdown-menu

--- a/app/assets/stylesheets/application/content_items.css.sass
+++ b/app/assets/stylesheets/application/content_items.css.sass
@@ -72,7 +72,7 @@ $content_item_margin_bottom: 20px
     background: url(/assets/move-content-item.png) center center no-repeat
     display: block
     position: absolute
-    z-index: 11000
+    z-index: 900
     text-align: center
     width: 20px
     height: 32px
@@ -83,7 +83,7 @@ $content_item_margin_bottom: 20px
 
   .content-item-options
     position: absolute
-    z-index: 10000
+    z-index: 900
     top: 0
     right: 10px
 
